[tool.poetry]
name = "pulse"
version = "0.1.0"
description = "A monitor/parser for sitemap xml pages"
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
black = "^19.10b0"
requests = "^2.24.0"
argparse = "^1.4.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
